src/objects/Recommendation_Factor__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Weights used to score recommendations for VFx</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>The name of the class that uses this weight, like VFx_RecommendationsVolunteerActivities.</description>
        <inlineHelpText>The name of the class that uses this weight, like VFx_RecommendationsVolunteerActivities.</inlineHelpText>
        <label>Class Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>The human-readable description of why this weight was applied, like &quot;Activity is within the next two days.&quot;</description>
        <inlineHelpText>The human-readable description of why this weight was applied, like &quot;Activity is within the next two days.&quot;</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The points that should be added for this result if the criteria are met.</description>
        <inlineHelpText>The points that should be added for this result if the criteria are met.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recommendation Factors</label>
</CustomObject>